[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Thomas Bollmeier <developer@thomas-bollmeier.de>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.58", features = ["derive"] }
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"
sha1 = "0.11.0-rc.5"                             # error handling
